--- a/ui/templates/account-info.html
+++ b/ui/templates/account-info.html
@@ -23,7 +23,7 @@
                         <ul>
                             <li><strong>نام:</strong> <span>{{ info.firstname }}</span></li>
                             <li><strong>نام خانوادگی:</strong> <span>{{ info.lastname }}</span></li>
-                            <li><strong>تلفن تماس:</strong> <span>{{ info.phone }}</span></li>
+                            <li><strong>تلفن تماس:</strong> <span>{{ info.user.phone }}</span></li>
                             <li><strong>نام کاربری:</strong> <span>{{ info.user.username }}</span></li>
                             <li><strong> ایمیل:</strong> <span>{{ info.user.email }}</span></li>
                         </ul>
