--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -183,7 +183,7 @@
               </ul>
            </div>
            <div class="location_main"> 
-            <p> <a href="mailto:info@inshopping.ir">info@inshopping.ir</a></p>
+            <p> <a href="mailto:info@inshopping.net">info@inshopping.net</a></p>
            </div>
         </div>
      </div>
