--- a/ui/templates/contactus.html
+++ b/ui/templates/contactus.html
@@ -49,7 +49,7 @@
             <div class="email">
              
               <h4><img style="width:30px; height:30px;" src="{% static 'images/Email_icon.png' %}"> ایمیل :</h4>
-              <p> <a href="mailto:info@inshopping.ir">info@inshopping.ir</a></p>
+              <p> <a href="mailto:info@inshopping.net">info@inshopping.net</a></p>
             </div>
             <br>
             <div class="phone">
