--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -64,6 +64,12 @@ form{
     margin-top: 20px;
     border-radius: 6px;
 }
+.mobile-enter-link {
+    padding: 6px;
+    border-radius: 5px;
+    color: orange !important;
+    background-color: #444444;
+}
 .field input,
 .field button{
     height: 100%;
