--- a/ui/templates/editaccountinfo.html
+++ b/ui/templates/editaccountinfo.html
@@ -4,7 +4,7 @@
 
 
     <form class="inputs" hx-post="{% url 'editaccountinfo' pk=pk %}" hx-swap="outerHTML"  hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' hx-trigger='submit' >
-        <a class="back-btn" href="#outerContainer"  hx-get="{% url 'account-info' %}" hx-target="#outerContainer"><img style="width:20px; height:20px; margin:20px 20px 0 0;" src="{% static 'images/back-icon.png' %}"></a>
+        <a class="back-btn" href="{% url 'account-info' %}" ><img style="width:20px; height:20px; margin:20px 20px 0 0;" src="{% static 'images/back-icon.png' %}"></a>
         <div class="forms" style="height:auto;">
         {% csrf_token %}
         {{ form.as_p }}
