--- a/ui/templates/editproduct.html
+++ b/ui/templates/editproduct.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<a class="back-btn" href="#outerContainer"  hx-get="{% url 'product_details' product_pk=product.pk  %}" hx-target="#outerContainer"><img style="width:20px; height:20px; margin:20px 20px 0 0;" src="{% static 'images/back-icon.png' %}"></a>
+<a class="back-btn" href="{% url 'product_details' product_pk=product.pk  %}"   ><img style="width:20px; height:20px; margin:20px 20px 0 0;" src="{% static 'images/back-icon.png' %}"></a>
 <div class="forms">
     <form class="inputs" hx-encoding='multipart/form-data' hx-post="{% url 'edit_product' product_pk=product.pk %}" hx-swap="outerHTML" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' hx-trigger='submit' >
         {% csrf_token %}
@@ -24,8 +24,9 @@
         
         <button type="submit">ذخیره  </button>
     </form>
-    
-    <a href="edit-product" hx-get="{% url 'product_edit' product_pk=product.pk %}" hx-target="#outerContainer" >تغییرات در تعداد , رنگ و سایز کالا</a>
+    <a href="edit-products-images" hx-push-url="true" hx-get="{% url 'edit-products-images' product_pk=product.pk %}" hx-target="#outerContainer" >تغییرات در تصاویر محصول</a>
+    <br>
+    <a href="edit-product" hx-push-url="true" hx-get="{% url 'product_edit' product_pk=product.pk %}" hx-target="#outerContainer" >تغییرات در تعداد , رنگ و سایز کالا</a>
     
 </div>
 
