--- a/ui/templates/verify_otp.html
+++ b/ui/templates/verify_otp.html
@@ -1,5 +1,54 @@
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Verify OTP</button>
-</form>
+{% load static %}
+
+{% block content %}
+<!DOCTYPE html>
+<!-- Coding by CodingLab | www.codinglabweb.com-->
+    <html lang="fa">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> Login </title>
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+        <link href="{% static 'asset/vendor/scss/reboot.css' %}" rel="stylesheet">   
+        <!-- Boxicons CSS -->
+        <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+         <!-- JavaScript -->
+        <script src="{% static 'assets/js/script.js' %}"></script>               
+    </head>
+    <body style="direction:rtl">
+       
+        <section class="container forms" style="height:100vh;  margin: 0;">
+            
+            <div class="form login">
+                <div class="form-content"> 
+
+
+
+
+                <form class="signinputs"  method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <div class="field button-field">
+                        <button type="submit">تایید</button>
+                    </div>
+                    
+                </form>
+            </div>
+
+                
+
+            
+        </section>
+
+        
+        
+    </body>
+</html>
+{% endblock %}
+
+
+
+
