--- a/ui/templates/shop-images.html
+++ b/ui/templates/shop-images.html
@@ -7,6 +7,7 @@
   
   <div class="forms" style="height:auto;">
     <h4>بنر های سایت خود را آپلود کنید</h4>
+    <p>(این قسمت الزامی نمی باشد.)</p>
     {% csrf_token %}
     {{ form.as_p }}
    
