--- a/ui/templates/bankaccount.html
+++ b/ui/templates/bankaccount.html
@@ -1,6 +1,6 @@
 <div style="height:auto;">
 <div class="forms">
-    <form class="inputs" hx-post="{% url 'bankaccount' %}" hx-swap="outerHTML"  hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' hx-trigger='submit' >
+    <form autocomplete="off" class="inputs" hx-post="{% url 'bankaccount' %}" hx-swap="outerHTML"  hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' hx-trigger='submit' >
       {% csrf_token %}
       {% for field in form %}
       <div class="form-group">
