--- a/ui/templates/products.html
+++ b/ui/templates/products.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="forms">
-    <form class="inputs" hx-encoding="multipart/form-data" hx-post="{% url 'products' %}" hx-swap="innerHTML" hx-target=".forms" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' hx-trigger="submit">
+    <form autocomplete="off" class="inputs" hx-encoding="multipart/form-data" hx-post="{% url 'products' %}" hx-swap="innerHTML" hx-target=".forms" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' hx-trigger="submit">
         <a class="back-btn" href="{% url 'productssection'  %}" ><img style="width:20px; height:20px; margin:20px 20px 0 0;" src="{% static 'images/back-icon.png' %}"></a>
 
         {% csrf_token %}
