--- a/ui/templates/send_otp.html
+++ b/ui/templates/send_otp.html
@@ -29,7 +29,7 @@
                <p>لطفا شماره موبایل خود را وارد کنید</p>
 
 
-                <form class="signinputs"  method="post">
+                <form autocomplete="off" class="signinputs"  method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <div class="field button-field">
