--- a/ui/templates/signup.html
+++ b/ui/templates/signup.html
@@ -33,7 +33,7 @@
             <div class="form login">
                 <div class="form-content">
                     <header>عضویت</header>
-                    <form class="signinputs" method="post">
+                    <form autocomplete="off" class="signinputs" method="post">
                         {% csrf_token %}
                         {{ form.as_p }}
                          <div class="field button-field">
